<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lg1"

    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/upper"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="390dp">

        <TextView
            android:id="@+id/qLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/search"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="52dp"
            android:background="@android:color/holo_green_light"
            android:text="@string/qLabel"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="34sp"
            tools:ignore="HardcodedText" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignBottom="@id/search"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="120dp"
            android:contentDescription="@string/LoadedImage"
            android:visibility="visible"
            app:srcCompat="@drawable/what_goes_where" />

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@android:color/holo_green_light"
            android:text="@string/appTitle"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="34sp"
            tools:ignore="HardcodedText" />

        <AutoCompleteTextView
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="200dp"
           android:layout_marginLeft="20dp"
            android:background="@android:color/white"
            android:dropDownHeight="200dp"
            android:ems="10"
            android:hint="Enter the waste name here"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="20sp"
            tools:ignore="UnusedAttribute,RtlHardcoded" />

        <Button
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/search"
            android:layout_alignBottom="@id/search"
            android:layout_toRightOf="@id/search"
            android:layout_marginLeft="10dp"
            android:onClick="getQuery"
            android:text="@string/goButtnLabel"
            android:textSize="20sp"
            tools:ignore="HardcodedText,RtlHardcoded" />

        <ListView
            android:id="@+id/textViewPrediction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            android:layout_alignTop="@id/search"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
             >

        </ListView>



    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottom"
        android:layout_width="fill_parent"
        android:layout_height="97dp"
        app:layout_constraintBottom_toBottomOf="@id/upper"
        tools:layout_editor_absoluteX="181dp">

        <Button
            android:id="@+id/databaseButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:onClick="displayDatabase"
            android:text="@string/dbButtnLabel"
            tools:ignore="HardcodedText" />

        <ImageButton
            android:id="@+id/voiceButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@id/imageButtonCamera"
            android:adjustViewBounds="false"
            android:onClick="voice"
            app:srcCompat="@drawable/voice" />

        <ImageButton
            android:id="@+id/imageButtonCamera"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:background="@color/buttonColor"
            android:alpha="0.6"
            android:contentDescription="@string/TakePhoto"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:onClick="camera"
            app:srcCompat="@drawable/camera_foreground" />


    </RelativeLayout>


</android.support.constraint.ConstraintLayout>